--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<java.version>8</java.version>
 
 		<!-- JUnit Properties 追加開始 -->
-		<junit.version>4.12</junit.version>
+		<!-- <junit.version>4.12</junit.version> -->
 		<!-- JUnit Properties 追加終了 -->
 
 		<!--  Jacoco Propeties 追加開始 -->
